--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.6.0",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.1",
+    "framer-motion": "^11.0.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
     "react-chartjs-2": "^5.2.0",
