--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://xolanimgube.github.io/invoice-generator",
   "name": "invoice-generator",
   "version": "0.1.0",
   "private": true,
@@ -10,6 +11,7 @@
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.1",
     "framer-motion": "^11.0.3",
+    "invoice-generator": "file:",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
     "react-chartjs-2": "^5.2.0",
@@ -23,6 +25,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -46,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^6.3.0",
     "tailwindcss": "^3.3.5"
   }
 }
